fix: mvn version changed - stage script changed